--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run Python
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/6 * * * *'
+#   schedule:
+#     - cron: '*/6 * * * *'
 
 jobs:
   build:
